--- a/cghousing/templates/coop/thread_new.html
+++ b/cghousing/templates/coop/thread_new.html
@@ -13,7 +13,7 @@
                 <a href="{% url 'coop:forum' pk=forum.id %}"
                     >{{forum.name}}</a>
                 &gt;
-                <a href="{% url 'coop:thread_new' url_name=forum.url_name %}">new</a>
+                new
             </div>
         </div>
     </div>
