--- a/cghousing/templates/coop/page_new.html
+++ b/cghousing/templates/coop/page_new.html
@@ -2,13 +2,13 @@
 
 {% load humanize %}
 
-{% block body_class %}class="forum_new"{% endblock %}
+{% block body_class %}class="page_new"{% endblock %}
 
 {% block breadcrumbs %}
     <div class="row">
         <div class="col-sm-12">
             <div class="breadcrumbs">
-                <a href="{% url 'coop:forums' %}">Forums</a>
+                <a href="{% url 'coop:pages' %}">Pages</a>
                 &gt;
                 new
             </div>
@@ -17,18 +17,20 @@
 {% endblock %}
 
 {% block content %}
-  <h1>Create a new Forum</h1>
+  <h1>Create a New Page</h1>
 
   {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-  <form action="{% url 'coop:forum_save' %}"
-        method="post"
-        class="default-form">
+  <form action="{% url 'coop:page_save' %}"
+    method="post"
+    class="default-form">
     {% csrf_token %}
-    {{ form.as_ul }}
-    <input type="submit" value="Create" />
+    <ul>{{ form.as_ul }}</ul>
+    <input type="submit" value="Save" />
   </form>
 
 {% endblock %}
 
 {% block rightbar %}{% endblock %}
+
+
