--- a/cghousing/templates/coop/file_detail.html
+++ b/cghousing/templates/coop/file_detail.html
@@ -20,7 +20,7 @@
 
 
 {% block content %}
-  <h1><i class="fa fa-{{ icon }}"></i>{{ file.name }}</h1>
+  <h1><i class="fa fa-{{ icon }}"></i>&nbsp;{{ file.name }}</h1>
 
   {% if file.description %}
   <p>{{ file.description }}</p>
