--- a/cghousing/templates/coop/thread_detail.html
+++ b/cghousing/templates/coop/thread_detail.html
@@ -123,6 +123,12 @@
                                         <input type="submit" value="Create Post" />
                                     </form>
 
+                                    <div class='markdown-help-container'>
+                                        <div class='markdown-help-inner-container'>
+                                        {{ markdown_help_text | safe }}
+                                        </div>
+                                    </div>
+
                                 </td>
                             </tr>
                         </tbody>
