--- a/cghousing/templates/coop/base.html
+++ b/cghousing/templates/coop/base.html
@@ -1,5 +1,6 @@
 {% load markdown_deux_tags %}
 {% load staticfiles %}
+{% load coop_extras %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -46,7 +47,8 @@
 
             <div id="user-tools">
             {% if user.is_authenticated %}
-                Welcome, <strong>{{ user.username }}</strong>.
+                Welcome, <a href="{% url 'coop:member_by_full_name' user.last_name|addstr:'_'|addstr:user.first_name %}"
+                    >{{ user.first_name }} {{ user.last_name }}</a></td>
                 <!-- <a href="{% url "coop:logout" %}">Change password</a>
                     / -->
                 <a href="{% url "coop:logout" %}">Log out</a>
