--- a/cghousing/templates/coop/members.html
+++ b/cghousing/templates/coop/members.html
@@ -59,8 +59,8 @@
     <tbody>
     {% for member in members %}
       <tr class="member-row">
-        <td><a href="{% url 'coop:member_by_full_name' member.last_name|addstr:'_'|addstr:member.first_name %}">{{ member.last_name }}</td>
-        <td><a href="{% url 'coop:member_by_full_name' member.last_name|addstr:'_'|addstr:member.first_name %}">{{ member.first_name }}</td>
+        <td><a href="{% url 'coop:member_by_full_name' member.last_name|addstr:'_'|addstr:member.first_name %}">{{ member.last_name }}</a></td>
+        <td><a href="{% url 'coop:member_by_full_name' member.last_name|addstr:'_'|addstr:member.first_name %}">{{ member.first_name }}</a></td>
         <td class="email">{{ member.email }}</td>
         <td>{{ member.phone_numbers_string }}</td>
         <td>#{{ member.unit.unit_number}}, {{ member.unit.block_number }}</td>
