--- a/cghousing/templates/coop/forum_detail.html
+++ b/cghousing/templates/coop/forum_detail.html
@@ -27,7 +27,7 @@
   <a class="action-link"
      href="{% url 'coop:thread_new' forum.url_name %}"
      title="Click to ceate a new thread in this forum."
-    ><i class="fa fa-fw fa-plus"></i>New</a>
+    ><i class="fa fa-fw fa-plus"></i>New Thread</a>
 
   {% if forum.threads.count %}
     <table class="default-table">
